<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Es3fny</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id" translatable="false">Ch01_Abass</string>
    <string name="title_activity_maps">Map</string>
    <string name="settings_name">Settings</string>
    <string name="Notification">Notification</string>
    <string-array name="Requests_Domains">
        <item>Choose</item>
        <item>Heart</item>
        <item>Burns</item>
        <item>Pressure and Diabetes</item>
        <item>First Aid</item>
    </string-array>
    <string-array name="blood_types">
        <item>اختر</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
    <string-array name="sorting_method">
        <item>Select sorting method</item>
        <item>Distance Ascending</item>
        <item>Distance Descending</item>
        <item>Time Ascending</item>
        <item>Time Descending</item>
    </string-array>
    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button" translatable="false">Dummy Button</string>
    <string name="dummy_content" translatable="false">DUMMY\nCONTENT</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="log_out">Log Out</string>
    <string name="hello_world">Hello World</string>
    <string name="instruction1">- Please Turn on the switch to be able to use this feature.</string>
    <string name="instruction2">- Add at LEAST one contact and at MOST 3 contacts.</string>
    <string name="instruction3">- The SOS message will contain your current location in addition to the following text message: \'Please Help Me!\'</string>
    <string name="send_sos_message_btn">Send SOS Message</string>
    <string name="add_edit_contacts_btn">Add / Edit Contacts</string>
    <string name="add_contact_btn">Add Contact</string>
    <string name="back_btn">Back</string>
    <string name="sending_to">Sending to:</string>
    <string name="send_btn">Send</string>
    <string name="sos_deactivate">Deactivate SOS Message!</string>
    <string name="sos_activate">Activate SOS Message!</string>
    <string name="name">Name:</string>
    <string name="Email_Sent">Email Sent !</string>
    <string name="Must_Email">You Must Enter Email!</string>
    <string name="phone_number">Number:</string>
    <string name="remove">Remove</string>
    <string name="notifications_admin_channel_name" translatable="false">Es3fny_Channel</string>
    <string name="notifications_admin_channel_description" translatable="false">This Channel Used In Notification Of Es3fny App</string>
    <string name="home">Home</string>
    <string name="blood_type">Blood type</string>
    <string name="describe_the_patient_state" tools:ignore="TypographyEllipsis">Request description...</string>
    <string name="send_request">Send Request</string>
    <string name="help_domain">Help Domain</string>
    <string name="request_help">Request Help</string>
    <string name="request_blood">Request Blood</string>
    <string name="sos_message">SOS Message</string>
    <string name="places">Nearest \n Places</string>
    <string name="first_aid_tips">First\n Aid Tips</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="go_to_register">Register</string>
    <string name="hospital">Hospital</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="police">Police</string>
    <string name="within_3_km">Within 3 KM</string>
    <string name="find">Find</string>
    <string name="status">Status</string>
    <string name="request_from">Request From</string>
    <string name="sender_name">Sender Name</string>
    <string name="domain">Domain</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="respond">Respond</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="national_id">National ID</string>
    <string name="register">Register</string>
    <string name="go_to_login">login</string>
    <string name="help_request">Help Request</string>
    <string name="donor">Blood Donor</string>
    <string name="responces">Responses</string>
    <string name="toolbar_title">Toolbar Title</string>
    <string name="distance">Distance</string>
    <string name="user_name">User Name</string>
    <string name="blood_request_success">Blood Donation Request Sent!</string>
    <string name="permission_denied">Sorry Permission Denied!</string>
    <string name="location_enabled">Location Enabled.</string>
    <string name="no_internet">No Internet Connection!</string>
    <string name="location_disabled">Location Disabled!</string>
    <string name="requesting">Requesting…</string>
    <string name="please_wait_till_help_request">Please wait till Help request completes!</string>
    <string name="enter_help_request_message">Help request message…</string>
    <string name="please_wait_till_blood_request">Please Wait till Blood Donation request completes!</string>
    <string name="open_location_first">Enable Location First</string>
    <string name="enter_email">Error: You MUST enter your email!</string>
    <string name="enter_password">Error: You MUST enter your password!</string>
    <string name="welcome">Welcome </string>
    <string name="the_location">The Location</string>
    <string name="response">response</string>
    <string name="respond_message">I\'m willing to help!</string>
    <string name="waiting">Waiting</string>
    <string name="closed">Closed</string>
    <string name="respond_sent">Respond Sent!</string>
    <string name="km">Km</string>
    <string name="loading">Loading…</string>
    <string name="wait_till_notification_loads">Please wait till notifications load!</string>
    <string name="something_went_wrong">Something went wrong with your location, Please try again…</string>
    <string name="registering">Registering</string>
    <string name="wait_till_register_complete">Please wait until registering completes!</string>
    <string name="must_enter_name">You MUST enter a name!</string>
    <string name="must_enter_email">You MUST enter an email!</string>
    <string name="must_enter_password">You MUST enter a password!</string>
    <string name="must_enter_NID">You MUST enter your National ID!</string>
    <string name="must_enter_valid_NID">You MUST enter a valid National ID!</string>
    <string name="invalid_NID">Invalid National ID!</string>
    <string name="young_for_register">You MUST be older than 19 years!</string>
    <string name="choose_sort_method">Please choose sorting method</string>
    <string name="activate_sos">Please activate SOS Message first!</string>
    <string name="add_contact_first">Please add contacts first!</string>
    <string name="sms_sent">SOS Message Sent!</string>
    <string name="sms_failed">SMS failed, please try again later!</string>
    <string name="add_3_contacts">Sorry you can\'t add more than 3 Contacts!</string>
    <string name="contact_deleted_success">Contact deleted successfully!</string>
    <string name="contact_added_success">Contact added successfully!</string>
    <string name="Must_Login">You Must Login!</string>
    <string name="back_to_exit">Press again to exit!</string>
    <string name="description_title">Description</string>
    <string name="address_title">Address</string>
    <string name="language">عربي</string>
    <string name="reset_password">Forget Password</string>
    <string name="es3fny_logo" translatable="false">Es3fny Logo</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="tab_text_3" translatable="false">Tab 3</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="safe_place" translatable="false">تأكد ان المكان امن حتي لاتصاب</string>
    <string name="shout" translatable="false">اصرخ أو اطلب المساعدة</string>
    <string name="onFire" translatable="false">إذا كانت ملابس الشخص مشتعلة</string>
    <string name="but_Water" translatable="false">أ) اغمرالحريق بالماء</string>
    <string name="burn_page_title" translatable="false"> حرق النار</string>
    <string name="blanket" translatable="false">ب)او لفة باستخدام بطانية</string>
    <string name="roll" translatable="false">ج)أو اطلب من الضحية أن يتدحرج على الأرض</string>
    <string name="cool" translatable="false">برّد الحرق بالماء الجاري كحد ادنى ١٠-١٥ دقيقة!</string>
    <string name="dont_use" translatable="false">لا تضع لصق الجروح ولا تضع أي مراهم</string>
    <string name="cotton_cover" translatable="false">غطي المنطقة المحروقة بقطعة قماش قطنية نظيفة</string>
    <string name="keep_warm" translatable="false">إبقي الضحية دافئة</string>
    <string name="transport" translatable="false">انقل الضحية إلى أقرب مركز للرعاية الصحية</string>
    <string name="wash_reminder" translatable="false">دائما اغسل يديك بعد تقديم الرعاية</string>
    <string name="amputation" translatable="false">البتر</string>
    <string name="amputation_transport" translatable="false">النقل السريع للشخص والجزء المبتور إلى المستشفى</string>
    <string name="write_Down" translatable="false">أكتب أسم الشخص و سبب البتر و وقت الحادث و التعبئة على ورقة و أحفظها</string>
    <string name="package_part2" translatable="false">ضع هذه الحقيبة في وعاء آخر مع الثلج ، ولكن لا ينبغي للثلج أن يكون على اتصال مباشر بالجزء المبتور</string>
    <string name="blood_contact" translatable="false">قلل الاتصال مع دم الشخص.إذا كان لديك قفازات متاحة استخدامها لحماية يديك.يمكنك أيضا استخدام كيس من البلاستيك لتغطية يديك</string>
    <string name="bleed_control" translatable="false">سيطر على النزيف عن طريق الضغط المباشر على الجرح</string>
    <string name="cotton_wound" translatable="false">ضع قطعة قماش نظيفةعلى الجرح</string>
    <string name="no_liquids" translatable="false">لا تضع أي سوائل أو مطهرات على الجزءالمبتور</string>
    <string name="package_part1" translatable="false">ضع الجزء المبتور في كيس بلاستيكي نظيف</string>
    <string name="b1" translatable="false">١</string>
    <string name="b2" translatable="false">۲</string>
    <string name="b3" translatable="false">۳</string>
    <string name="b4" translatable="false">٤</string>
    <string name="b5" translatable="false">٥</string>
    <string name="b6" translatable="false">٦</string>
    <string name="b7" translatable="false">٧</string>
    <string name="b8" translatable="false">٨</string>
    <string name="b9" translatable="false">٩</string>
    <string name="b10" translatable="false">١٠</string>
    <string name="b11" translatable="false">١١</string>
    <string name="b12" translatable="false">١٢</string>
    <string name="b13" translatable="false">١۳</string>
    <string name="b14" translatable="false">١٤</string>
    <string name="b15" translatable="false">١٥</string>
</resources>