<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <include
        layout="@layout/my_action_bar"
        android:id="@+id/app_bar"
        />
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
     android:layout_width="fill_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="top|center"
        android:orientation="vertical"
        tools:context="abass.com.firebasepushnotifications.abass.com.Es3fny.Request.NotificationActivity">
        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:fontFamily="@font/nunito_semibold"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            android:background="@drawable/rounded_border"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:text="@string/status" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/text1"
                android:layout_width="160dp"
                android:layout_height="47dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="left"
                android:paddingTop="10dp"
                android:text="@string/request_from"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/from_txt"
                android:layout_width="fill_parent"
                android:layout_height="47dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/text1"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="right"
                android:paddingTop="10dp"
                android:text="@string/sender_name"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="horizontal"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/text2"
                android:layout_width="160dp"
                android:layout_height="47dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="left"
                android:paddingTop="10dp"
                android:text="@string/help_domain"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/domain_txt"
                android:layout_width="fill_parent"
                android:layout_height="47dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/text2"
                android:fontFamily="@font/nunito_semibold"
                android:gravity="right"
                android:paddingTop="10dp"
                android:text="@string/domain"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_title"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/description"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:background="@drawable/textarea_bordered_rounded"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address_title"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_semibold"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:padding="5dp"
            android:text="@string/address"
            android:textAlignment="center"
            android:background="@drawable/textarea_bordered_rounded"
            android:textSize="18sp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/respondButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/respond"
            android:layout_marginTop="7dp"
            android:background="@drawable/rounded_button"
            android:textColor="#09f"
            android:layout_gravity="center"
            android:visibility="invisible"/>
    </LinearLayout>



</ScrollView>
</LinearLayout>
