<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.es3fny.Main.LoginActivity"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:padding="10dp">

        <ImageView
            android:layout_width="196dp"
            android:layout_height="145dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/logo"
            android:contentDescription="@string/es3fny_logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/edemail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_background"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <EditText
                android:id="@+id/edpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/input_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_login"
                android:textColorHint="@color/input_login_hint" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_button"
                android:text="@string/login"
                android:textColor="#09F" />

            <Button
                android:id="@+id/btnLinkToRegisterScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dip"
                android:background="@drawable/rounded_button"
                android:text="@string/go_to_register"
                android:textAllCaps="false"
                android:textColor="#09F"
                android:textSize="15sp" />
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:layout_marginTop="40dp"
                android:layout_gravity="center">
            <Button
                android:id="@+id/btnSkip"
                android:layout_width="143dp"
                android:layout_height="34dp"
                android:layout_gravity="right|end"

                android:layout_weight="1"
                android:layout_marginTop="40dip"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/skip"
                android:textColor="#09F" />

            <Button
                android:layout_weight="1"
                android:id="@+id/btnReset"
                android:layout_width="143dp"
                android:layout_height="34dp"
                android:layout_gravity="left|end"
                android:layout_marginTop="40dip"
                android:layout_marginStart="10dp"
                android:background="@drawable/rounded_button"
                android:text="@string/reset_password"
                android:textColor="#09F" />
            </LinearLayout>

            <!-- Link to Login Screen -->

        </LinearLayout>

    </LinearLayout>