<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="abass.firebasepushnotifications.Maps.MainMap"
    android:background="@color/white">

    <include
        layout="@layout/my_action_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/app_bar"
        />
    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- Text Label -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dip"
            android:fontFamily="bebas"
            android:text="@string/places"
            android:textSize="25sp"
            android:textStyle="bold" />

        <!-- Spinner Element -->
        <!--<Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="47dp"
            android:prompt="@string/app_name" /> -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox
                android:id="@+id/hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital"
                android:textSize="18sp"
                android:onClick="onCheckBoxClicked"/>
            <CheckBox
                android:id="@+id/pharmacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/pharmacy"
                android:onClick="onCheckBoxClicked"/>
            <CheckBox
                android:id="@+id/police"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/police"
                android:textSize="18sp"
                android:onClick="onCheckBoxClicked"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:thumbTint="@color/wallet_holo_blue_light"
                android:layout_weight="1"
                android:max="10"
                android:progress="3"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:text="@string/within_3_km"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/find"
        android:textColor="#09f"
        android:background="@drawable/rounded_button"
        android:textSize="20sp" />


</RelativeLayout>
