<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Sos.SosActivity">
    <include
        layout="@layout/my_action_bar"
        android:id="@+id/app_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="206dp"
        tools:layout_editor_absoluteY="139dp"
        tools:ignore="MissingConstraints">


        <Switch
            android:id="@+id/sos_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="25dp"
            android:text="" />


        <Button
            android:id="@+id/edit_contacts"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignEnd="@+id/sos_switch"
            android:layout_alignTop="@+id/send_sos_msg"
            android:background="@drawable/rounded_button"
            android:textSize="18dp"
            android:textColor="#09f"
            android:text="@string/add_edit_contacts_btn" />

        <Button
            android:id="@+id/send_sos_msg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_button"
            android:layout_marginStart="30dp"
            android:textSize="18dp"
            android:textColor="#09f"
            android:text="@string/send_sos_message_btn" />

        <TextView
            android:id="@+id/inst1"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sos_switch"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/instruction1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/inst2"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inst1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/instruction2"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/inst3"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inst2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/instruction3"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/send_sos_msg"
            android:layout_centerVertical="true"
            android:text="" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/send_sos_msg"
            android:layout_marginBottom="215dp"
            android:text="" />


    </RelativeLayout>

</LinearLayout>
