<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    android:orientation="horizontal"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:id="@+id/nameLayout">
        <TextView
            android:id="@+id/textN"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />
        <TextView
            android:id="@+id/textName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/textN"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:id="@+id/phoneLayout"
        android:layout_below="@+id/nameLayout">
        <TextView
            android:id="@+id/textP"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/phone_number"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black" />
        <TextView
            android:id="@+id/textPhone"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/textP"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/phoneLayout"
        android:background="@drawable/rounded_button"
        android:onClick="onDelete"
        android:textColor="#09f"
        android:text="@string/remove" />
</RelativeLayout>
